docs: add documentation for users
